flux/apps/youtube/invidious/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invidious
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - iv.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: invidious
          port: 3000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: invidious-cors
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: invidious
  cors:
    allowOrigins:
      - "https://yt.nahsi.dev"
    allowMethods:
      - GET
      - POST
      - OPTIONS
      - HEAD
      - PATCH
      - PUT
      - DELETE
    allowHeaders:
      - User-Agent
      - Authorization
      - Content-Type
    allowCredentials: true
